--- a/config/private.yml
+++ b/config/private.yml
@@ -1,2 +1,2 @@
-LI_SECRET: ff0fa0a1-6ad4-42e6-bcde-37252b5e0bd6
-LI_TOKEN : 7cc4af76-bb55-4ee8-a94c-e44e310b03bd
+li_key: 758rlot27c5c8k
+li_secret: e95DTac9aMxSEKvd
